@@ -19,9 +19,9 @@ Build-Depends: dbus <!nocheck>,
                gnome-pkg-tools (>= 0.11),
                libdbus-1-dev (>= 1.2.14) <!nocheck> <!noinsttest>,
                libelf-dev (>= 0.142),
-               libffi-dev (>= 3.3),
+               libffi-dev,
                libgamin-dev [hurd-any] | libfam-dev [hurd-any],
-               libmount-dev (>= 2.35.2-7~) [linux-any],
+               libmount-dev [linux-any],
                libpcre3-dev (>= 1:8.35),
                libselinux1-dev [linux-any],
                libxml2-utils,
@@ -37,7 +37,6 @@ Build-Depends: dbus <!nocheck>,
                xsltproc,
                xterm <!nocheck>,
                zlib1g-dev
-Build-Depends-Indep: gtk-doc-tools (>= 1.32.1),
 Rules-Requires-Root: no
 Standards-Version: 4.5.1
 Homepage: https://wiki.gnome.org/Projects/GLib
